tests/fixtures/errors/e0404_logical_on_bus.mimz
// expect: E0404
module M {
  in a: bits[4]
  in b: bits[4]
  out y: bit
  y = a && b
}
